--- a/flex/flex-colors.css
+++ b/flex/flex-colors.css
@@ -136,6 +136,12 @@ body {
     color: #000 !important;background-color: #E9767C !important
   }
   
+  /* Highlight Color */
+  [color-h],.color-h {
+    color: #000 !important;background-color: #59e673 !important;
+    border-left: #4CAF50 2px solid;
+  }
+
   
   /* Dark Schema */
   @media (prefers-color-scheme: dark) {
