Hash auslesen umgebaut (ohne /src/)

--- a/flex/flex.css
+++ b/flex/flex.css
@@ -232,6 +232,9 @@ nav a, ul a {
   width: 100%;
 }
 
+/* test */
+/*nav ul li ul:not(:empty):before {content: "[ ] ";} */
+
 
 /* Code */
 pre,code,kbd,samp {
