--- a/flex/flex.css
+++ b/flex/flex.css
@@ -595,39 +595,39 @@ f-item,[f-item],.f-item{
 [w-m],.w-m{min-width: 745px;}
 [w-s],.w-s{min-width: 560px;}
 
-[w-1],.w-1{min-width: 8.33333333%;}
-[w-2],.w-2{min-width: 16.66666667%;}
-[w-20],.w-20{min-width: 20%;}
-[w-3],.w-3,[w-25],.w-25{min-width: 25%;}
-[w-4],.w-4,[w-33],.w-33{min-width: 33.33333333%;}
-[w-5],.w-5{min-width: 41.66666667%;}
-[w-6],.w-6,[w-50],.w-50{min-width: 50%;}
-[w-7],.w-7{min-width: 58.33333333%;}
-[w-60],.w-60{min-width: 60%;}
-[w-8],.w-8,[w-66],.w-66{min-width: 66.66666667%; }
-[w-9],.w-9,[w-75],.w-75{min-width: 75%;}
-[w-80],.w-80{min-width: 80%;}
-[w-10],.w-10{min-width: 83.33333333%;}
-[w-11],.w-11{min-width: 91.66666667%;}
-[w-12],.w-12,[w-100],.w-100{min-width: 100%;}
+[w-1],.w-1{width: 8.33333333%;}
+[w-2],.w-2{width: 16.66666667%;}
+[w-20],.w-20{width: 20%;}
+[w-3],.w-3,[w-25],.w-25{width: 25%;}
+[w-4],.w-4,[w-33],.w-33{width: 33.33333333%;}
+[w-5],.w-5{width: 41.66666667%;}
+[w-6],.w-6,[w-50],.w-50{width: 50%;}
+[w-7],.w-7{width: 58.33333333%;}
+[w-60],.w-60{width: 60%;}
+[w-8],.w-8,[w-66],.w-66{width: 66.66666667%; }
+[w-9],.w-9,[w-75],.w-75{width: 75%;}
+[w-80],.w-80{width: 80%;}
+[w-10],.w-10{width: 83.33333333%;}
+[w-11],.w-11{width: 91.66666667%;}
+[w-12],.w-12,[w-100],.w-100{width: 100%;}
 
 /* Höhen */
-[h-1],.h-1{min-height: 8.33333333vh;}
-[h-2],.h-2{min-height: 16.66666667vh;}
-[h-20],.h-20{min-height: 20vh;}
-[h-3],.h-3,[h-25],.h-25{min-height: 25vh;}
-[h-4],.h-4,[h-33],.h-33{min-height: 33.33333333vh;}
-[h-5],.h-5{min-height: 41.66666667vh;}
-[h-6],.h-6,[h-50],.h-50{min-height: 50vh;}
-[h-7],.h-7{min-height: 58.33333333vh;}
-[h-60],.h-60{min-height: 60vh;}
-[h-8],.h-8,[h-66],.h-66{min-height: 66.66666667vh; }
-[h-9],.h-9,[h-75],.h-75{min-height: 75vh;}
-[h-80],.h-80{min-height: 80vh;}
-[h-10],.h-10{min-height: 83.33333333vh;}
-[h-11],.h-11{min-height: 91.66666667vh;}
-[h-12],.h-12,[h-100],.h-100{min-height: 100vh;}
-[h-vp],.h-vp{min-height: 100vh;}
+[h-1],.h-1{height: 8.33333333vh;}
+[h-2],.h-2{height: 16.66666667vh;}
+[h-20],.h-20{height: 20vh;}
+[h-3],.h-3,[h-25],.h-25{height: 25vh;}
+[h-4],.h-4,[h-33],.h-33{height: 33.33333333vh;}
+[h-5],.h-5{height: 41.66666667vh;}
+[h-6],.h-6,[h-50],.h-50{height: 50vh;}
+[h-7],.h-7{height: 58.33333333vh;}
+[h-60],.h-60{height: 60vh;}
+[h-8],.h-8,[h-66],.h-66{height: 66.66666667vh; }
+[h-9],.h-9,[h-75],.h-75{height: 75vh;}
+[h-80],.h-80{height: 80vh;}
+[h-10],.h-10{height: 83.33333333vh;}
+[h-11],.h-11{height: 91.66666667vh;}
+[h-12],.h-12,[h-100],.h-100{height: 100vh;}
+[h-vp],.h-vp{height: 100vh;}
 
 
 /* ============================ */
